Add the oatmeal recipe
I added the oatmeal recipe using the blt recipe as a template.

--- a/recipies/blt.html
+++ b/recipies/blt.html
@@ -18,9 +18,10 @@ Its easy so there is no chance you will mess it up. Enjoy! </p>
 <h3>Steps</h3>
 <ol>
     <li>Cook bacon</li>
-    <li>Spread mayonaise on one slice of bread</li>
-    <li>Slice tomato into flat slices and add to the mayo with bread</li>
-    <li>Rip lettuce into pieces sized for your sandwich and add them</li>
+    <li>Spread mayonaise on both slices of bread</li>
+    <li>Rip lettuce into pieces sized for your sandwich and add them to your sandwich</li>
+    <li>Slice tomato into flat slices and add to your sandwich</li>
     <li>Cut bacon strips in half and add them to your sandwich </li>
+    <li>Close your sandwitch with the top piece of bread</li>
     <li>Cut sandwich in half and enjoy</li>
 </ol>
