Salad dressing recipe added
A third recipe was added in the same style as the other two.

--- a/recipies/oatmeal.html
+++ b/recipies/oatmeal.html
@@ -1,10 +1,10 @@
 <h1>Not Your Mother's Oatmeal</h1>
-<img src="../img/oatmeal.jpg" alt="BLT sandwich">
+<img src="../img/oatmeal.jpg" alt="Picture of Oatmeal" width="400" height="500">
 <h3>Description</h3>
 <p>Oatmeal is a breakfast dish that never fails. This recipie will show
     you a way to shake things up a little bit a add new flavors to your oatmeal.
     I was inspired by rice pudding to add turmeric, and from there test rest of
-    the ingredients followed  </p>
+    the ingredients followed.</p>
 
 <h3>Ingredients</h3>
 <ul>
