--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="./recipies/blt.html">BLT</a> 
+    <p><a href="./recipies/blt.html">BLT</a> </p>
+    <p><a href="./recipies/oatmeal.html">Not Your Mother's Oatmeal</a> </p>
 </body>
 </html>
