--- a/recipies/blt.html
+++ b/recipies/blt.html
@@ -9,7 +9,7 @@ Its easy so there is no chance you will mess it up. Enjoy! </p>
 <h3>Ingredients</h3>
 <ul>
     <li>2 slices bread</li>
-    <li>1 tbls mayonaise</li>
+    <li>1 tbsp mayonaise</li>
     <li>1/2 beefsteak tomato</li>
     <li>2 leaves romaine lettuce</li>
     <li>2-3 strips bacon</li>
