--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <p><a href="./recipies/blt.html">BLT</a> </p>
-    <p><a href="./recipies/oatmeal.html">Not Your Mother's Oatmeal</a> </p>
+    <ul>
+        <li><a href="./recipies/blt.html">BLT</a> </li>
+        <li><a href="./recipies/oatmeal.html">Oatmeal</a> </li>
+        <li><a href="./recipies/salad-dressing.html">Salad dressing</a> </li>
+    </ul>
 </body>
 </html>
